tests/errors/semantic/blocking/TUPLE_WITH_INCOHERENT_RANKS.py
if __name__ == "__main__":
    a = (1, [1, 2, 3])
